# python-namosclient

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  setup.cfg  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
namosclient/: __init__.py
namosclient/tests/: test_namosclient.py
python-namosclient/: __init__.py
python-namosclient/tests/: test_python-namosclient.py
